# LeoX

./: .env.example  .gitignore  PLAN.md  README.md  docker-compose.yml  fly.toml  pyproject.toml  requirements.txt  setup.py
brain/: Dockerfile  ai_router.py  main.py  orchestrator.py  personality.py  response_formatter.py
brain/routes/: web_chat.py
brain/static/: index.html
cli/: __main__.py  commands.py  display.py
whatsapp/: client.py
whatsapp-service/: index.js  package-lock.json  package.json
