[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leox"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.28",
    "python-dotenv>=1.0",
]

[project.scripts]
leox = "cli.commands:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*", "brain*", "whatsapp*", "memory*", "integrations*", "commitment*", "scheduler*", "identity*"]
